--- a/style.css
+++ b/style.css
@@ -84,7 +84,7 @@
 }
 
 .coming-soon .span {
-  color: #88ff55;
+  color: #f873ff;
 }
 
 /* TOP Coming Soon pill */
@@ -241,3 +241,4 @@
 body {
   overflow: hidden;
 }
+
