--- a/style.css
+++ b/style.css
@@ -53,7 +53,7 @@ body, html {
   gap: 15px;
 }
 
-.main .ROSTAKE { width: 100%; max-width: 434px; height: auto; }
+.main .STANDO { width: 100%; max-width: 434px; height: auto; }
 
 .main .BOTTOM-TEXT {
   font-weight: 700;
@@ -65,15 +65,6 @@ body, html {
 
 .main .text-wrapper { color: #ffffff; }
 .main .span { color: #f873ff; }
-
-.image-button {
-  border: none;
-  background: none;
-  cursor: pointer;
-  margin-top: 10px;
-}
-
-.image-button img { width: 180px; height: auto; border-radius: 8px; }
 
 .scripts-label {
   font-weight: 700;
