--- a/style.css
+++ b/style.css
@@ -42,7 +42,7 @@ body, html {
   display: flex;
   flex-direction: column;
   align-items: center;
-  gap: 30px;
+  gap: 15px;
   z-index: 1;
 }
 
@@ -50,7 +50,7 @@ body, html {
   display: flex;
   flex-direction: column;
   align-items: center;
-  gap: 15px;
+  gap: 10px;
 }
 
 .main .STANDO { width: 100%; max-width: 434px; height: auto; }
@@ -61,6 +61,7 @@ body, html {
   text-align: center;
   line-height: 28px;
   color: #ffffff;
+  margin-top: 5px;
 }
 
 .main .text-wrapper { color: #ffffff; }
